<resources>
    <string name="app_name">古诗文</string>
    <string name="action_settings">Settings</string>
    <string name="main_home">首页</string>
    <string name="main_author">作者</string>
    <string name="main_finder">搜索</string>
    <string name="main_photo">对白</string>
    <string name="main_mine">我的</string>
    <string name="retry_connect">网络被外星人带走了，请点击重试=。=</string>
    <string name="search_recommend">搜索记录</string>
    <string name="search_history">搜索历史</string>
    <string name="clean_tags">清除历史</string>
    <string name="search_hint">请输入作品或作者,例如\'李白\'或\'将进酒\'</string>
    <string name="my_store">我的收藏</string>
    <string name="history">历史记录</string>
    <string name="about">关于</string>
    <string name="change_skin">皮肤主题</string>
    <string name="suggestion">意见反馈</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clike_finish">再点击一次退出</string>
    <string name="no_permission_storage">申请权限失败</string>
    <string name="load_fail">加载数据异常</string>
    <string name="load_end">已经加载到底了</string>
    <string name="login">登录</string>
    <!--<string name="home_commend">推荐</string>-->
    <!--<string name="home_poetry">诗文</string>-->
    <!--<string name="home_sentence">名句</string>-->

    <string-array name="home_item">
        <item>推荐</item>
        <item>诗文</item>
        <item>名句</item>
    </string-array>

    <string-array name="menu_item">
        <item>书籍</item>
        <item>电影</item>
        <item>散文</item>
        <item>动漫</item>
        <item>电视剧</item>
        <item>古诗词</item>
    </string-array>

    <string-array name="recommend_tag_item">
        <item>如梦令</item>
        <item>白居易</item>
        <item>纳兰性德</item>
        <item>昨夜西风凋碧树</item>
        <item>水调歌头</item>
        <item>李商隐</item>
    </string-array>
</resources>
