<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/history_linear"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/setting_selector_bg"
        android:gravity="center_vertical"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="1dp"
        android:layout_height="48dp">
        <TextView
            android:text="@string/history"
            android:textColor="@color/text_black"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_gravity="bottom"
        android:layout_marginRight="30dp"
        android:background="@color/split_line"/>
    <LinearLayout
        android:id="@+id/my_store"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/setting_selector_bg"
        android:gravity="center_vertical"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:layout_height="48dp">
        <TextView
            android:text="@string/my_store"
            android:textColor="@color/text_black"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_gravity="bottom"
        android:layout_marginRight="30dp"
        android:background="@color/split_line"/>
    <LinearLayout
        android:id="@+id/skin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/setting_selector_bg"
        android:gravity="center_vertical"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:layout_height="48dp">
        <TextView
            android:text="@string/change_skin"
            android:textColor="@color/text_black"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_gravity="bottom"
        android:layout_marginRight="30dp"
        android:background="@color/split_line"/>
    <LinearLayout
        android:id="@+id/suggestion"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/setting_selector_bg"
        android:gravity="center_vertical"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:layout_height="48dp">
        <TextView
            android:text="@string/suggestion"
            android:textColor="@color/text_black"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_gravity="bottom"
        android:layout_marginRight="30dp"
        android:background="@color/split_line"/>
    <LinearLayout
        android:id="@+id/clear_cache"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/setting_selector_bg"
        android:gravity="center_vertical"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:layout_height="48dp">
        <TextView
            android:text="@string/clear_cache"
            android:textColor="@color/text_black"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_gravity="bottom"
        android:layout_marginRight="30dp"
        android:background="@color/split_line"/>
    <LinearLayout
        android:id="@+id/about"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/setting_selector_bg"
        android:gravity="center_vertical"
        android:layout_marginBottom="1dp"
        android:clickable="true"
        android:layout_height="48dp">
        <TextView
            android:text="@string/about"
            android:textColor="@color/text_black"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_gravity="bottom"
        android:layout_marginRight="30dp"
        android:background="@color/split_line"/>

</LinearLayout>
